# niceai-next

api/: README.md  alembic.ini  app.py  config.py  pyproject.toml  requirements.txt  vercel.json
api/core/: db.py
api/migrations/: env.py
api/migrations/versions/: 07e2befd3371_initial_migration.py  d01a2c98fcb8_initial_migration.py
api/models/: __init__.py  app.py  dataset.py  mixins.py  provider.py  user.py
api/niceai/constants/: db.py
api/niceai/core/: db.py
api/niceai/models/: app.py  dataset.py  mixins.py  user.py
api/niceai/routers/: app.py  auth.py  dataset.py  provider.py  user.py
api/niceai/services/: app.py  dataset.py  provider.py  user.py
api/routers/: app.py  dataset.py  provider.py  user.py
api/services/: app.py  apps.py  dataset.py  datasets.py  provider.py  user.py  users.py
web/: bun.lockb  drizzle.config.ts  package.json
web/src/: env.js
web/src/app/: layout.tsx  metadata.ts  page.tsx
web/src/app/_components/: create-post.tsx
web/src/app/api/auth/[...nextauth]/: route.ts
web/src/app/api/trpc/[trpc]/: route.ts
web/src/client/state/: use-ui-store.ts
web/src/server/: auth.ts
web/src/server/api/: root.ts  trpc.ts
web/src/server/api/routers/: post.ts
web/src/server/db/: schema.ts  table.ts
web/src/trpc/: react.tsx  server.ts
