[tool.poetry]
name = "niceai"
version = "0.0.1"
description = "Nice AI API"
authors = ["Zack <lorenx@163.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
baidu-aip = "^4.16.13"
chardet = "^5.2.0"
uvicorn = "^0.30.0"
nanoid = "^2.0.0"
sqlmodel = "^0.0.18"
psycopg = {version = "^3.1.19", extras = ["binary"]}
inflection = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
