[tool.poetry]
name = "niceai"
version = "0.0.1"
description = "Nice AI API"
authors = ["Zack <lorenx@163.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "niceai"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
chardet = "^5.2.0"
uvicorn = "^0.30.0"
nanoid = "^2.0.0"
sqlmodel = "^0.0.18"
inflection = "^0.5.1"
psycopg2-binary = "^2.9.9"
langchain = "^0.2.3"
openai = "^1.33.0"
pydantic = "^2.7.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
